kubernetes/monitoring/victoria-metrics-stack/templates/vmsingle-external.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vmsingle-external
  namespace: victoria-metrics-stack
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8428
      targetPort: 8428
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vmsingle-external
  namespace: victoria-metrics-stack
subsets:
  - addresses:
      - ip: 10.0.10.86
    ports:
      - name: http
        port: 8428
